Worked a bit on backend for ebay api and got parsing frontend input to backend for home page done
