# backend/api/openapi.yaml
@@ -268,6 +268,38 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /v0/giftapi:
+    get:
+      description: Return a user's gift suggestion based on what they typed
+      parameters:
+      - name: value
+        in: query
+        required: false
+        description: User's username
+        schema:
+          type: string
+      - name: search1
+        in: query
+        required: false
+        description: User's username
+        schema:
+          type: string
+      responses:
+        200:
+          description: User response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/QuestionnaireResponses'
+        404:
+          description: Unknown user
+        default:
+          description: Unexpected Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 components:
   schemas:
     Error:
